force-app/main/default/objects/Distributor_Document__c/Distributor_Document__c.object-meta.xml
<CustomObject>
    <label>Distributor Document</label>
    <nameField>
        <label>Distributor Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>