force-app/main/default/objects/Distributor_Document__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Documents</relationshipLabel>
    <relationshipName>Distributor_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>