force-app/main/default/objects/Distributor_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Photograph (Owner)</fullName>
            </value>
            <value>
                <fullName>Photograph (Shop)</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Demand Draft(DD)</fullName>
            </value>
            <value>
                <fullName>Dealer booklet</fullName>
            </value>
            <value>
                <fullName>Annexure of declaration of relation</fullName>
                <isActive>false</isActive>
                <label>Annexure of declaration of relation</label>
            </value>
            <value>
                <fullName>Annexure of declaration of signing documents</fullName>
                <isActive>false</isActive>
                <label>Annexure of declaration of signing documents</label>
            </value>
            <value>
                <fullName>Blank Letter Pad for Address Proof</fullName>
                <isActive>false</isActive>
                <label>Blank Letter Pad for Address Proof</label>
            </value>
            <value>
                <fullName>Copy of Partnership Firm/ Company/HUF/Prop. Affidavit</fullName>
                <isActive>false</isActive>
                <label>Copy of Partnership Firm/ Company/HUF/Prop. Affidavit</label>
            </value>
            <value>
                <fullName>Copy of Pesticide / Seed License</fullName>
                <isActive>false</isActive>
                <label>Copy of Pesticide / Seed License</label>
            </value>
            <value>
                <fullName>GST Certificate</fullName>
                <isActive>false</isActive>
                <label>GST Certificate</label>
            </value>
            <value>
                <fullName>Latest bank statement of last 3 months</fullName>
                <isActive>false</isActive>
                <label>Latest bank statement of last 3 months</label>
            </value>
            <value>
                <fullName>Owner/PARTNERs/Director ADHAAR Copy</fullName>
                <isActive>false</isActive>
                <label>Owner/PARTNERs/Director ADHAAR Copy</label>
            </value>
            <value>
                <fullName>Photograph (Selfie with Customer)</fullName>
                <isActive>false</isActive>
                <label>Photograph (Selfie with Customer)</label>
            </value>
            <value>
                <fullName>Residential Address Proof Proprietor/Partner/Director</fullName>
                <isActive>false</isActive>
                <label>Residential Address Proof Proprietor/Partner/Director</label>
            </value>
            <value>
                <fullName>Scanned Security Cheque</fullName>
                <isActive>false</isActive>
                <label>Scanned Security Cheque</label>
            </value>
            <value>
                <fullName>Signed Business Policy</fullName>
                <isActive>false</isActive>
                <label>Signed Business Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>