force-app/main/default/objects/Distributor_Document__c/fields/Document_Upload__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Upload</label>
    <type>Checkbox</type>
</CustomField>